fix(table): update selected row background color to improve contrast

--- a/packages/core/src/components/table/table-vars.scss
+++ b/packages/core/src/components/table/table-vars.scss
@@ -14,7 +14,7 @@
   .tds-mode-variant-primary {
     --tds-table-body-row-background: var(--tds-grey-50);
     --tds-table-zebra-mode-backround: var(--tds-white);
-    --tds-table-body-row-background-selected: var(--tds-grey-700);
+    --tds-table-body-row-background-selected: var(--tds-grey-100);
   }
 
   .tds-mode-variant-secondary {
